Added transformer + unloading support
